--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,6 +2,7 @@
     background-image: url('../assets/image-background.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header{
@@ -11,4 +12,15 @@
     font-size: 20px;
     position: fixed;
     z-index: 2;
+}
+
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    background: linear-gradient(to right, black, darkblue);
+    position: fixed;
+    bottom: 0px
 }
