--- a/src/css/videos.css
+++ b/src/css/videos.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .flex-child{
     margin: auto;
