--- a/html-css/app.css
+++ b/html-css/app.css
@@ -13,12 +13,29 @@
     width: 100%;
     height: 60px;
     margin: 0;
-    background-color: darkblue;
+    text-align: center;
+    background: linear-gradient(to right, darkblue, black);
     font-size: 20px;
+    color: aliceblue;
+    text-align: center;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 2;
+}
+
+.lists{
+    font-size: 28px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    position: relative;
+    background: linear-gradient(to right, white, goldenrod);
+    border-radius: 50%
+}
+
+.ordered-list{
+
 }
 
 .footer{
